--- a/demos/demo-react-native/package.json
+++ b/demos/demo-react-native/package.json
@@ -13,16 +13,24 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
-    "theta-client-react-native": "1.9.0",
-    "react": "18.2.0",
-    "react-native": "0.71.14",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
     "marzipano": "0.10.2",
-    "react-native-webview": "^13.6.2"
+    "react": "18.2.0",
+    "react-is": "^18.3.1",
+    "react-native": "0.71.14",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^15.3.0",
+    "react-native-svg-transformer": "^1.4.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-webview": "^13.6.2",
+    "theta-client-react-native": "1.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.3",
@@ -37,6 +45,7 @@
     "jest": "^29.3.1",
     "metro-react-native-babel-preset": "0.73.4",
     "prettier": "^2.8.1",
+    "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "18.2.0",
     "typescript": "^4.9.4"
   },
