--- a/demos/demo-react-native/android/app/src/main/AndroidManifest.xml
+++ b/demos/demo-react-native/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,14 @@
   package="com.demoreactnative">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+    <uses-permission android:name="android.permission-group.CAMERA" />
+    
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
