--- a/demos/demo-react-native/package.json
+++ b/demos/demo-react-native/package.json
@@ -11,6 +11,7 @@
     "postinstall": "./scripts/copy-npm-module-to-web-bundles.sh"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "marzipano": "0.10.2",
@@ -20,12 +21,14 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-webview": "^13.6.2",
+    "rn-fetch-blob": "^0.12.0",
     "theta-client-react-native": "1.9.0"
   },
   "devDependencies": {
